# motionControlForPlotters

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: avr-gcc-toolchain.cmake
doc/: INSTALL.md  README.md
motionControlCore/: CMakeLists.txt  motionControlCoreSources.cmake
motionControlCore/src/main/cpp/hal/: ExternalPowerSupplyDetector.h  GpioLed.h  SystemClock.h  UartSerial.cpp  UartSerial.h
motionControlCore/src/main/cpp/motion/control/raster/: Rasterizer2D.cpp  Rasterizer2D.h
motionControlCore/src/main/cpp/motion/stepperMotor/: StepperMotor.cpp  StepperMotor.h  StepperMotorController.cpp  StepperMotorController.h  StepperMotorDriver.h
motionControlCore/src/test/cpp/hal/: UartSerialTest.cpp
motionControlCore/src/test/cpp/motion/stepperMotor/: StepperMotorControllerTest.cpp
platform/arduino/: CMakeLists.txt
platform/arduino/src/main/cpp/: main.cpp
platform/arduino/src/main/cpp/platform/arduino/: GpioLed.cpp  GpioLed.h  SystemClock.cpp  SystemClock.h  UartSerial.cpp  UartSerial.h
platform/arduinoStepMotorsXYController/: CMakeLists.txt  README.md
platform/arduinoStepMotorsXYController/src/: AvrExternalPowerSupplyDetector.cpp  AvrExternalPowerSupplyDetector.h  AvrGpioLed.cpp  AvrGpioLed.h  AvrStepDirectionDriver.cpp  AvrStepDirectionDriver.h  AvrSystemClock.cpp  AvrSystemClock.h  AvrUartSerial.cpp  AvrUartSerial.h  BuildInfo.h.in  ExternalPowerSupplyDetector.cpp  ExternalPowerSupplyDetector.h  GpioLed.cpp  GpioLed.h  StepperMotorController.cpp  StepperMotorController.h  StepperMotorProgram.cpp  StepperMotorProgram.h  SystemClock.cpp  SystemClock.h  UartSerial.cpp  UartSerial.h  main.cpp
platform/interactiveConsole/: CMakeLists.txt
platform/interactiveConsole/src/: main.cpp
scripts/: clean.sh  compile.sh  run.sh  runInteractive.sh  send.sh  serial-monitor.py  serial-monitor.sh
